@@ -1,18 +1,23 @@
 package com.neg.hr.human.resource.controller;
 
-import com.neg.hr.human.resource.validator.CompanyValidator;
 import com.neg.hr.human.resource.dto.CompanyEntityDTO;
+import com.neg.hr.human.resource.dto.IdRequest;
+import com.neg.hr.human.resource.dto.NameRequestDTO;
 import com.neg.hr.human.resource.dto.create.CreateCompanyRequestDTO;
 import com.neg.hr.human.resource.dto.update.UpdateCompanyRequestDTO;
 import com.neg.hr.human.resource.entity.Company;
 import com.neg.hr.human.resource.mapper.CompanyMapper;
 import com.neg.hr.human.resource.service.CompanyService;
+import com.neg.hr.human.resource.validator.CompanyValidator;
 import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/companies")
@@ -21,66 +26,73 @@ public class CompanyController {
     private final CompanyService companyService;
     private final CompanyValidator companyValidator;
 
-    public CompanyController(CompanyService companyService, CompanyValidator companyValidator) {
+    public CompanyController(CompanyService companyService,
+                             CompanyValidator companyValidator) {
         this.companyService = companyService;
         this.companyValidator = companyValidator;
     }
 
-    @GetMapping
-    public List<CompanyEntityDTO> getAllCompanies() {
-        return companyService.findAll()
-                .stream()
+    @PostMapping("/getAll")
+    public ResponseEntity<List<CompanyEntityDTO>> getAllCompanies() {
+        List<CompanyEntityDTO> companies = companyService.findAll().stream()
                 .map(CompanyMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(companies);
     }
 
-    @GetMapping("/{id}")
-    public ResponseEntity<CompanyEntityDTO> getCompanyById(@PathVariable Long id) {
-        Optional<Company> opt = companyService.findById(id);
-        return opt.map(company -> ResponseEntity.ok(CompanyMapper.toDTO(company)))
-                .orElseGet(() -> ResponseEntity.notFound().build());
+    @PostMapping("/getById")
+    public ResponseEntity<CompanyEntityDTO> getCompanyById(
+            @Valid @RequestBody IdRequest request) {
+        return companyService.findById(request.getId())
+                .map(company -> ResponseEntity.ok(CompanyMapper.toDTO(company)))
+                .orElse(ResponseEntity.notFound().build());
     }
 
-    @GetMapping("/name/{name}")
-    public ResponseEntity<CompanyEntityDTO> getCompanyByName(@PathVariable String name) {
-        Optional<Company> opt = companyService.findByName(name);
-        return opt.map(company -> ResponseEntity.ok(CompanyMapper.toDTO(company)))
-                .orElseGet(() -> ResponseEntity.notFound().build());
+    @PostMapping("/getByName")
+    public ResponseEntity<CompanyEntityDTO> getCompanyByName(
+            @Valid @RequestBody NameRequestDTO request) {
+        return companyService.findByName(request.getName())
+                .map(company -> ResponseEntity.ok(CompanyMapper.toDTO(company)))
+                .orElse(ResponseEntity.notFound().build());
     }
 
-    @PostMapping
-    public ResponseEntity<CompanyEntityDTO> createCompany(@Valid @RequestBody CreateCompanyRequestDTO dto) {
+    @PostMapping("/create")
+    public ResponseEntity<CompanyEntityDTO> createCompany(
+            @Valid @RequestBody CreateCompanyRequestDTO dto) {
         companyValidator.validateCreate(dto);
         Company company = CompanyMapper.toEntity(dto);
         Company saved = companyService.save(company);
         return ResponseEntity.ok(CompanyMapper.toDTO(saved));
     }
 
-    @PutMapping("/{id}")
-    public ResponseEntity<CompanyEntityDTO> updateCompany(@PathVariable Long id, @Valid @RequestBody UpdateCompanyRequestDTO dto) {
-        Optional<Company> existingOpt = companyService.findById(id);
-        if (existingOpt.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-        companyValidator.validateUpdate(dto, id);
-        Company existing = existingOpt.get();
-        CompanyMapper.updateEntity(existing, dto);
-        Company updated = companyService.save(existing);
+    @PostMapping("/update")
+    public ResponseEntity<CompanyEntityDTO> updateCompany(
+            Long Id, @Valid @RequestBody UpdateCompanyRequestDTO dto) {
+        companyValidator.validateUpdate(dto, Id);
+
+        // 1. Var plan company bul
+        Company existingCompany = companyService.findById(Id)
+                .orElseThrow(() -> new RuntimeException("Company not found"));
+        CompanyMapper.updateEntity(existingCompany, dto);
+
+        // 3. excellence entity ile update yap
+        Company updated = companyService.update(Id, existingCompany);
+
         return ResponseEntity.ok(CompanyMapper.toDTO(updated));
     }
 
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteCompany(@PathVariable Long id) {
-        Optional<Company> existingOpt = companyService.findById(id);
-        if (existingOpt.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-        companyService.deleteById(id);
+
+    @PostMapping("/delete")
+    public ResponseEntity<Void> deleteCompany(
+            @Valid @RequestBody IdRequest request) {
+        companyService.deleteById(request.getId());
         return ResponseEntity.noContent().build();
     }
 
-    @GetMapping("/exists/{name}")
-    public boolean existsByName(@PathVariable String name) {
-        return companyService.existsByName(name);
+    @PostMapping("/exists")
+    public ResponseEntity<Boolean> companyExists(
+            @Valid @RequestBody NameRequestDTO request) {
+        boolean exists = companyService.existsByName(request.getName());
+        return ResponseEntity.ok(exists);
     }
 }
